# NepseDataHome

./: .coverage  .env.example  .gitignore  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  setup.sh
.circleci/: config.yml
.github/workflows/: deploy.yml
api/: Dockerfile  __init__.py  config.py  main.py
api/routes/: api_keys.py  auth.py  billing.py  coverage.py  devices.py  downloads.py  health.py  market.py  platform.py  prices.py  symbols.py
api/schemas/: __init__.py  price.py  response.py  symbol.py
api/services/: __init__.py  abuse_detection_service.py  api_key_service.py  auth_dependency.py  bigquery_service.py  billing_db.py  cache_service.py  credit_service.py  csv_service.py  device_service.py  esewa_service.py  khalti_service.py  payment_plans.py  session_auth.py  session_dependency.py  storage_service.py  usage_service.py
data/: broker_overview.json
data/broker/: flow_2026-05-12.csv
data/corporate_actions/: corporate_actions.csv
data/dashboard/: market_overview.json
data/db/: nepsense.duckdb
data/history/: manifest.json  nepse_all_prices.csv
data/master/: nepse_all_companies_daily.duckdb  nepse_all_companies_daily.parquet  nepsense_prices.csv  nepsense_prices.duckdb  (+1 more)
docs/: ADJUSTMENT_METHOD.md  BACKTESTING_GUIDE.md  DATA_DICTIONARY.md  HISTORICAL_DATA_COMPLETENESS.md  PLATFORM_DEPLOYMENT.md  SOURCES.md  floorsheet_import_guide.md
examples/: 01_load_and_analyze.ipynb
nepsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipeline/: build_master_files.py  daily_update.py  generate_coverage.py  historical_backfill.py  load_to_bigquery.py  upload_to_gcs.py  validate_data.py
reports/: 2026-05-12.md
scripts/: deploy_cloud_run.sh  local_deploy.sh  run_api_local.sh  run_daily_update.sh
tests/: conftest.py  test_adjustment.py  test_api_health.py  test_api_market.py  test_api_prices.py  test_api_symbols.py  test_archive_importer.py  test_backfill.py  test_billing_access_guard.py  test_cleaning.py  test_companywise_importer.py  test_corporate_actions.py  test_coverage_report.py  test_data_quality.py  test_databook.py  test_esewa_gateway.py  test_floorsheet_intelligence.py  test_html_parsing.py  test_normalization.py  test_storage.py  test_validation.py
web/: build_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+7841 files in other folders)
